--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import './utils/vars';
+ @import './utils/vars';
 @import './utils/reset';
 @import './utils/visually-hidden';
 @import './utils/placeholders';
@@ -16,3 +16,4 @@
 @import './components/footer';
 @import './components/modal';
 @import './components/portfolio';
+@import './components/card set'
