--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,8 @@
   --black-color: #000000;
   --icons-background-color: #afb1b8;
   --anim-main: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --margin: 30px;
+  --item: 1;
 }
 
 h1,
@@ -35,6 +37,8 @@ ul {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .visually-hidden {
@@ -51,7 +55,7 @@ img {
   margin: -1px;
 }
 
-.footer__container, .header__container {
+.header__container {
   width: 1200px;
   padding-right: 15px;
   padding-left: 15px;
@@ -64,11 +68,27 @@ body {
 }
 
 .container {
-  width: 1200px;
   padding-right: 15px;
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
+  outline: 2px solid red;
+  outline-offset: -2px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .header {
@@ -188,12 +208,10 @@ body {
 .logo__footer {
   color: var(--white-color);
 }
-
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
   max-width: 1600px;
-  height: 600px;
   margin: 0 auto;
   background-color: #C4C4C4;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero.jpg);
@@ -203,20 +221,38 @@ body {
 
 .hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.3636363636;
+  font-size: 26px;
+  line-height: 1.6153846154;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
-  width: 696px;
-  margin: auto;
+  width: 460px;
   color: var(--white-color);
   margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    width: 360px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.3636363636;
+  }
 }
 
 .hero__button {
   display: block;
-  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
@@ -229,30 +265,39 @@ body {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   margin: 0 auto;
-  padding: 10px 32px;
+  padding: 10px 24px;
   -webkit-transition: background-color var(--anim-main);
   transition: background-color var(--anim-main);
+}
+@media screen and (min-width: 1199px) {
+  .hero__button {
+    padding: 10px 32px;
+  }
 }
 .hero__button:hover, .hero__button:focus {
   background-color: var(--button-active-color);
 }
 
 .special {
-  padding-top: 115px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .special {
+    padding-top: 115px;
+    padding-bottom: 94px;
+  }
 }
 
-.special__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+@media screen and (min-width: 768px) {
+  .special__list {
+    --item:2;
+  }
 }
-
-.special__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .special__list {
+    --item:4;
+  }
 }
 
 .special__box {
@@ -265,14 +310,12 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 270px;
   height: 120px;
   background-color: var(--secondary-background-color);
   margin-bottom: 30px;
 }
 
 .special__title {
-  font-weight: 700;
   font-size: 14px;
   line-height: 1.1428571429;
   letter-spacing: 0.03em;
@@ -280,9 +323,13 @@ body {
   color: var(--secondary-text-color);
   margin-bottom: 10px;
 }
+@media screen and (max-width: 765px) {
+  .special__title {
+    text-align: center;
+  }
+}
 
 .special__text {
-  width: 270px;
   font-size: 14px;
   line-height: 1.7142857143;
   letter-spacing: 0.03em;
@@ -293,15 +340,25 @@ body {
   padding-top: 0;
   padding-bottom: 94px;
 }
+@media screen and (max-width: 1199px) {
+  .what {
+    display: none;
+  }
+}
 
 .what__title, .team__title, .clients__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.1666666667;
+  font-size: 28px;
+  line-height: 1.1785714286;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--secondary-text-color);
   margin-bottom: 50px;
+}
+@media screen and (min-width: 1200px) {
+  .what__title, .team__title, .clients__title {
+    font-size: 36px;
+    line-height: 1.1666666667;
+  }
 }
 
 .what__list {
@@ -330,7 +387,6 @@ body {
 }
 
 .what__text {
-  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1428571429;
@@ -340,19 +396,26 @@ body {
 }
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--secondary-background-color);
 }
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
-.team__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  gap: 30px;
+@media screen and (min-width: 768px) {
+  .team__list {
+    --item:2;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__list {
+    --item:4;
+  }
 }
 
 .team__item {
@@ -431,21 +494,28 @@ body {
 }
 
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .clients__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 30px;
+  --item:2;
+}
+@media screen and (min-width: 768px) {
+  .clients__list {
+    --item:3;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__list {
+    --item:6;
+  }
 }
 
 .clients__link {
@@ -458,7 +528,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid var(--icons-background-color);
   border-radius: 4px;
@@ -470,52 +540,96 @@ body {
   fill: var(--third-text-color);
   border: 1px solid var(--third-text-color);
 }
+@media screen and (min-width: 768px) {
+  .clients__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__link {
+    width: 170px;
+  }
+}
 
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--third-background-color);
+  outline: 2px solid red;
+  outline-offset: -2px;
 }
 
-.footer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+@media screen and (max-width: 1199px) {
+  .footer__container {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    width: 1200px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
 }
 
-.footer__credentials {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+@media screen and (min-width: 768px) {
+  .footer__credentials {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__credentials {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .address {
-  font-style: normal;
   margin-top: 20px;
-  margin-right: 70px;
+  font-style: normal;
 }
-
-.address__list {
-  width: 231px;
+@media screen and (max-width: 1199px) {
+  .address {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .address {
+    margin-right: 70px;
+  }
 }
 
 .address__link {
   font-size: 14px;
   line-height: 1.7142857143;
   letter-spacing: 0.03em;
-  margin-bottom: 9px;
   color: var(--white-color);
   -webkit-transition: color var(--anim-main);
   transition: color var(--anim-main);
@@ -551,9 +665,14 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media screen and (max-width: 1199px) {
+  .group__list {
+    margin-bottom: 60px;
+  }
 }
 
 .group__item:not(:last-child) {
@@ -585,19 +704,20 @@ body {
   fill: var(--white-color);
 }
 
-.pidpyska__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media screen and (min-width: 1200px) {
+  .pidpyska__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .pidpyska__field {
   width: 358px;
   height: 50px;
-  margin-right: 12px;
   padding: 16px;
   color: var(--white-color);
   outline: unset;
@@ -608,6 +728,17 @@ body {
   border-radius: 4px;
   -webkit-transition: border-color var(--anim-main);
   transition: border-color var(--anim-main);
+}
+@media screen and (max-width: 1199px) {
+  .pidpyska__field {
+    width: 450px;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .pidpyska__field {
+    margin-right: 12px;
+  }
 }
 
 .pidpyska__field:focus {
@@ -637,6 +768,12 @@ body {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
+}
+@media screen and (max-width: 1199px) {
+  .pidpyska__button {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 .pidpyska__button:hover, .pidpyska__button:focus {
   background-color: var(--button-active-color);
@@ -1004,4 +1141,33 @@ body {
   line-height: 1.875;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+}
+
+.card__set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: var(--margin);
+}
+
+.card__set--item {
+  -ms-flex-preferred-size: calc((100% - var(--margin) * (var(--item) - 1)) / var(--item));
+      flex-basis: calc((100% - var(--margin) * (var(--item) - 1)) / var(--item));
+}
+@media screen and (min-width: 768px) {
+  .card__set--item {
+    -ms-flex-preferred-size: calc((100% - var(--margin) * (var(--item) - 1)) / var(--item));
+        flex-basis: calc((100% - var(--margin) * (var(--item) - 1)) / var(--item));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card__set--item {
+    -ms-flex-preferred-size: calc((100% - var(--margin) * (var(--item) - 1)) / var(--item));
+        flex-basis: calc((100% - var(--margin) * (var(--item) - 1)) / var(--item));
+  }
 }/*# sourceMappingURL=main.css.map */
