--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,7 +2,6 @@
     @include section(200px, 200px);
 
     max-width: 1600px;
-    height: 600px;
     margin: 0 auto;
     background-color: #C4C4C4;
     background-image: linear-gradient( rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -12,20 +11,34 @@
   
   .hero__title {
     font-weight: 900;
-    font-size: 44px;
-    line-height: calc(60 / 44);
+    font-size: 26px;
+    line-height: calc(42 / 26);
     letter-spacing: 0.06em;
     text-transform: uppercase;
     text-align: center;
+    width: 460px;
+    @media screen and (min-width:768px) {
+      width: 360px;
+      margin-right: auto;
+      margin-left: auto;
+    }
+    @media screen and (min-width:1200px) {
     width: 696px;
-    margin: auto;
+    margin-right: auto;
+    margin-left: auto;
+    }
     color: var(--white-color);
     margin-bottom: 30px;
+
+    
+    @media screen and(min-width:1200px) {
+      font-size: 44px;
+      line-height: calc(60 / 44);
+    }
   }
   
   .hero__button {
     display: block;
-    font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: calc(30 / 16);
@@ -37,8 +50,12 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     cursor: pointer;
     margin: 0 auto;
-    padding: 10px 32px;
-  
+    padding: 10px 24px;
+
+    @media screen and (min-width:1199px){
+      padding: 10px 32px;
+    }
+
     transition: background-color var(--anim-main);
   
     &:hover,
