--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,12 +1,21 @@
 .team {
+  @include section(60px, 60px);
+  
+  @media screen and (min-width: 1200px) {
     @include section(94px, 94px);
+  }
+    
     background-color: var(--secondary-background-color);
   }
   
   .team__list {
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
+    @media screen and (min-width: 768px) {
+      --item:2;
+    }
+
+    @media screen and (min-width: 1200px) {
+      --item:4;
+    }
   }
   
   .team__item {
