--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -10,6 +10,9 @@
     --black-color: #000000;
     --icons-background-color: #afb1b8;
     --anim-main: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    --margin: 30px;
+    --item: 1;
   }
 
    
