--- a/sass/components/_postiyni.scss
+++ b/sass/components/_postiyni.scss
@@ -4,6 +4,7 @@
   @media screen and (min-width: 1200px) {
     @include section(94px, 94px);
   }
+  @extend %container;
   }
   
   .clients__list {
