--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,12 +1,46 @@
 .hero {
-    @include section(200px, 200px);
+  @include section(200px, 200px);
+  max-width: 1600px;
+  margin: 0 auto;
+  background-color: #C4C4C4;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  @media screen and (max-width:480px) {
+    
+// Mobile screen
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero/img_mob@1x.jpg);
+  // retina mobile screen
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/img_mob@2x.jpg);
+  }
+  }
+  
 
-    max-width: 1600px;
-    margin: 0 auto;
-    background-color: #C4C4C4;
-    background-image: linear-gradient( rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/hero.jpg);
-    background-position: center;
+  // Tablet screen
+  @media screen and (min-width: 481px) {
+
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/img_tab@1x.jpg);
+    // retina tablet screen
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/hero/img_tab@2x.jpg);
+    }
+  }
+
+  // Desktop screen
+  @media screen and (min-width: 769px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/Img_com@1x.jpg);
+    // retina desktop screen
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/hero/Img_com@2x.jpg);
+    }
+  }
 }
   
   .hero__title {
@@ -17,23 +51,15 @@
     text-transform: uppercase;
     text-align: center;
     width: 460px;
-    @media screen and (min-width:768px) {
-      width: 360px;
-      margin-right: auto;
-      margin-left: auto;
-    }
-    @media screen and (min-width:1200px) {
-    width: 696px;
     margin-right: auto;
     margin-left: auto;
-    }
     color: var(--white-color);
     margin-bottom: 30px;
 
-    
-    @media screen and(min-width:1200px) {
+    @media screen and (min-width:1200px) {
       font-size: 44px;
       line-height: calc(60 / 44);
+      width: 696px;
     }
   }
   
@@ -52,7 +78,7 @@
     margin: 0 auto;
     padding: 10px 24px;
 
-    @media screen and (min-width:1199px){
+    @media screen and (min-width:1200px){
       padding: 10px 32px;
     }
 
