--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,7 +4,7 @@
   @media screen and (min-width: 1200px) {
     @include section(94px, 94px);
   }
-    
+    @extend %container;
     background-color: var(--secondary-background-color);
   }
   
