--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,6 @@
 @import './utils/mixins';
 
 @import './components/base';
-@import './components/container';
 @import './components/header';
 @import './components/logo';
 @import './components/hero';
@@ -16,4 +15,5 @@
 @import './components/footer';
 @import './components/modal';
 @import './components/portfolio';
-@import './components/card set'
+@import './components/card set';
+@import './components/menu';
