--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,7 +1,26 @@
 %container {
-    width: 1200px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-left: auto;
+        margin-right: auto;
+    
+        // outline: 2px solid red;
+        // outline-offset: -2px;
+    
+        // mob screen
+        @media  screen and (min-width: 480px) {
+          width: 480px;
+        }
+    
+        // tab screen
+        @media screen and (min-width: 768px) {
+          width: 768px;
+        }
+    
+        // com screen
+        @media screen and (min-width: 1200px) {
+          width: 1200px;
+        }
+      }
+
+    
