--- a/sass/components/_specials.scss
+++ b/sass/components/_specials.scss
@@ -1,49 +1,43 @@
-.special {
+.special__container {
+  @extend %container;
   @include section(60px, 60px);
-  
   @media screen and (min-width: 1200px) {
     @include section(115px, 94px);
   }
-    @extend %container;
+}
+.special__list {
+  @media screen and (min-width: 768px) {
+    --item:2;
   }
-  
-  .special__list {
-    @media screen and (min-width: 768px) {
-      --item:2;
-    }
+  @media screen and (min-width: 1200px) {
+    --item:4;
+  }
+}
+.special__box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  background-color: var(--secondary-background-color);
+  margin-bottom: 30px;
+}
 
-    @media screen and (min-width: 1200px) {
-      --item:4;
-    }
+.special__title {
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--secondary-text-color);
+  margin-bottom: 10px;
+  @media screen and (max-width: 767px) {
+    text-align: center;
   }
+}
 
-  .special__box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120px;
-    background-color: var(--secondary-background-color);
-    margin-bottom: 30px;
-  }
-  
-  .special__title {
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--secondary-text-color);
-    margin-bottom: 10px;
-
-    @media screen and (max-width: 767px) {
-      text-align: center;
-    }
-  }
-  
-  .special__text {
-    font-size: 14px;
-    line-height: calc(24 / 14);
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-  }
-
-  
+.special__text {
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+ 
