--- a/sass/components/_what.scss
+++ b/sass/components/_what.scss
@@ -1,12 +1,14 @@
 .what {
-  @media screen and (max-width:1199px) {
+  @media screen and (max-width:1199.9px) {
     display: none;
   }
-     @include section(0, 94px);
-
-     @extend %container;
   }
   
+  .what-container {
+    @extend %container;
+    @include section(0, 94px);
+  }
+
   .what__title, .team__title, .clients__title {
     font-size: 28px;
     line-height: calc(33 / 28);
